# lab2gui

./: main.cpp  widget.h
lab2/: widget.cpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp  notepad.cpp  notepad.h
lab4/: CMakeLists.txt
lab4/src/: imageEditor.cpp  imageEditor.hpp  main.cpp
lab5/: CMakeLists.txt
lab5/src/: mainwindow.cpp  mainwindow.h  scribblearea.cpp  scribblearea.h
